--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             { character: 'は', answer: 'ha' },
             { character: 'ひ', answer: 'hi' },
             { character: 'ふ', answer: 'fu' },
-            { character: 'ふ', answer: 'he' },
+            { character: 'へ', answer: 'he' },
             { character: 'ほ', answer: 'ho' },
   
             { character: 'ま', answer: 'ma' },
